# py_scdb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
docs/: CONTRIBUTING.md
py_scdb/: __init__.py  py_scdb.pyi
src/: async_store.rs  lib.rs  macros.rs  store.rs
test/: conftest.py  test_async_benchmark.py  test_async_py_scdb.py  test_benchmark.py  test_benchmarks.py  test_py_scdb.py  utils.py
