[package]
name = "py_scdb"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_scdb"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module"] }
scdb = "0.2"
pyo3-asyncio = { version = "0.17", features = ["attributes", "async-std-runtime"] }
async-std = "1.12"
